--- a/style.css
+++ b/style.css
@@ -1,26 +1,3 @@
-
-body {
-    margin: 0;
-}
-
-
-.my-container {
-    border: 1px solid green;
-}
-
-
-.my-row {
-    border: 3px solid red;
-    height: 300px;
-}
-
-
-.my-col {
-    border: 3px dotted blue;
-}
-
-
-#special-col{
-    display: flex;
-    justify-content: center;
+.message-body {
+    text-align: center;
 }
