--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
 .message-body {
     text-align: center;
 }
+
+.subject {
+    padding: 25px;
+    font-size: 24px;
+    font-weight: bold;
+    max-width: 100%;
+    background-color: darkgray;
+}
