--- a/style.css
+++ b/style.css
@@ -13,3 +13,10 @@
 .col-11 {
     font-size: 24px;
 }
+
+@media screen and (min-width: 1000px) {
+    .email-highlight  {
+        background-color:rgb(33, 145, 226);
+        color: white;
+    }
+}
