--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@
     font-size: 24px;
 }
 
+.compose-lg {
+    border-radius: 10%;
+}
+
 @media screen and (min-width: 1000px) {
     .email-highlight  {
         background-color:rgb(33, 145, 226);
