--- a/style.css
+++ b/style.css
@@ -2,16 +2,18 @@
     text-align: center;
 }
 
-.subject {
-    padding: 25px;
-    font-size: 24px;
-    font-weight: bold;
-    max-width: 100%;
-    background-color: darkgray;
-}
-
 .message-highlight {
     font-size: 24px;
+}
+
+.email-previews {
+    background-color: darkgrey;
+}
+
+.email-prev {
+    margin: 5px;
+    background-color: white;
+
 }
 
 .compose-lg {
