--- a/style.css
+++ b/style.css
@@ -2,13 +2,18 @@
     text-align: center;
 }
 
+.btn-highlight {
+    background-color:rgb(33, 145, 226);
+}
+
 .message-highlight {
     font-size: 24px;
 }
 
 .subject {
     padding: 25px;
-    font-size: 24px;
+    font-size: 30px;
+    font-family: "Trirong", serif;
     font-weight: bold;
     max-width: 100%;
     background-color: darkgray;
