--- a/style.css
+++ b/style.css
@@ -7,17 +7,16 @@
     background-color:rgb(33, 145, 226);
 }
 
-.message-highlight {
-    font-size: 24px;
-}
-
 .subject {
-    padding: 25px;
+    padding: 14px;
     font-size: 30px;
     font-family: "Trirong", serif;
     font-weight: bold;
     max-width: 100%;
-    background-color: darkgray;
+}
+
+.msg-highlight {
+    font-size: 24px;
 }
 
 .email-prev-bar {
