--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
     max-width: 100%;
 }
 
-.msg-highlight {
+.msg-body {
     font-size: 24px;
 }
 
@@ -24,7 +24,9 @@
 }
 
 .email-prev {
-    margin: 5px;
+    margin-right: -5px;
+    margin-top: 7px;
+    margin-left: 5px;
     background-color: white;
 
 }
